--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
                   <div class="user-features">
                      <div class="login-container">
                         <a class="login-img" href="#"> Валентин Петухов </a>
-                        <a class="log-out"href="#">Выйти </a>  
+                        <a class="log-out"href="#">Выйти </a>
                      </div>
                      <div class="compare">
                         <a href="#" class="compare-text"> Сравнить </a>
@@ -35,9 +35,8 @@
                </div>
                <ul class="main-nav">
                   <li>
-                     <a href="#" class="catalog"> Каталог товаров </a>
                      <div class="dropdown">
-                        <img class="plus" src="img/plus.png" width="16" height="16" alt="plus">
+                     <a href="#" class="catalog"> Каталог товаров </a>      
                         <div class="dropdown-content">
                            <ul class="first-column">
                               <li class="first-item-column"> <a class="dropdown-item" href="#"> Виртуальная реальность </a></li>
@@ -215,7 +214,7 @@
             <footer class="main-footer">
                <div class="footer-wrapper">
                   <div class="first-line">
-                     <p class="footer-logo"> Device </p>
+                      <a class="footer-logo-link" href="#"><img class="footer-logo" src="img/device-y.png" width="164" height="36" alt="Device"> </a>
                      <div class="footer-user-block">
                         <a class="footer-login-img" href="#"> Войти </a>
                         <a href="#" class="footer-compare-text"> Сравнить </a>
