--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
    <head>
       <meta charset="utf-8">
       <title>Девайс</title>
-      <link href="css/style.css" rel="stylesheet">
+      <link href="css/mini.css" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=cyrillic" rel="stylesheet">
+      <link href="css/normalize.css" rel="stylesheet">
    </head>
    <body>
       <div class="page-container">
@@ -39,7 +40,7 @@
                         <div class="dropdown-content">
                            <ul class="first-column">
                               <li class="first-item-column"> <a class="dropdown-item" href="#"> Виртуальная реальность </a></li>
-                              <li class="first-item-column"> <a class="dropdown-item" href="#">Моноподы для селфи </a></li>
+                              <li class="first-item-column"> <a class="dropdown-item" href="catalog.html">Моноподы для селфи </a></li>
                               <li class="first-item-column"> <a class="dropdown-item" href="#">Экшн-камеры </a></li>
                            </ul>
                            <ul class="second-column">
@@ -75,7 +76,7 @@
                   <label class="slider-circle"  for="slide-3"> 3</label>
                </div>
                <div class="slides">
-                  <div class="slide slide-first clearfix">
+                  <div class="slide slide-first">
                      <span class="number-slide">01 </span>
                      <img class="slider-img" src="img/selfie-stick.png" width="384" height="486" alt="selfie-stick">
                      <div class="description">
@@ -100,7 +101,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="slide slide-second clearfix">
+                  <div class="slide slide-second">
                      <span class="number-slide">02 </span>
                      <img class="slider-img" src="img/fitness.png" width="345" height="485" alt="fitness">
                      <div class="description">
@@ -115,7 +116,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="slide slide-third clearfix">
+                  <div class="slide slide-third">
                      <span class="number-slide">03 </span>
                      <img class="slider-img quadr" src="img/quad.png" width="526" height="334" alt="quad">
                      <div class="description">
@@ -143,7 +144,7 @@
                </div>
                <div class="index-item">
                   <a class="item-link monopod" href = "#"> </a>
-                  <a class="item-text monopod-text" href="catalog.html"> Моноподы для селфи </a>
+                  <a class="item-text monopod-text" href="#"> Моноподы для селфи </a>
                </div>
                <div class="index-item">
                   <a class="item-link camera" href = "#"> </a>
@@ -218,11 +219,7 @@
                <div class="map">
                   <iframe class="contacts_map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4498.179703080083!2d37.52689062959126!3d55.687425600238065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2sul.+Stroiteley%2C+15%2C+Moskva%2C+Russia%2C+119311!5e0!3m2!1sen!2sus!4v1502401180813" width="560" height="220"  style="border:0" allowfullscreen></iframe>
                </div>
-               <div class="map-popup">
-                  <button  class="close close-map" type="button" name="button">Закрыть</button>
-                  <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4498.179703080083!2d37.52689062959126!3d55.687425600238065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2sul.+Stroiteley%2C+15%2C+Moskva%2C+Russia%2C+119311!5e0!3m2!1sen!2sus!4v1502401180813" width="560" height="220"  style="border:0" allowfullscreen></iframe>
-               </div>
-               <a class="write-us" href="#">Напишите нам</a>
+               <a class="write-us" href="writeus.html">Напишите нам</a>
                <div class="popup-write-us">
                   <form class="form-write-us">
                      <button class="close-popup" type="button" name="button"> Закрыть </button>
@@ -271,5 +268,5 @@
             </div>
          </div>
       </footer>
-      <script type="text/javascript" src="js/script.js"></script>
+      <script type="text/javascript" src="js/mini-js.js"></script>
    </body>
