--- a/catalog.html
+++ b/catalog.html
@@ -3,9 +3,10 @@
    <head>
       <meta charset="utf-8">
       <title>Каталог товаров</title>
-      <link href="css/style.css" rel="stylesheet">
+      <link href="css/mini.css" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=cyrillic" rel="stylesheet">
+      <link href="css/normalize.css" rel="stylesheet">
    </head>
    <body>
       <div class="page-container ">
