--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>Каталог товаров</title>
-      <link href="css/mini.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&amp;subset=cyrillic" rel="stylesheet">
       <link href="css/normalize.css" rel="stylesheet">
@@ -160,7 +160,7 @@
                                  <div class="new"> New </div>
                                  <a class="item-header header-beginners" href="#"> Любительская селфи-палка </a>
                                  <span class="item-price"> 500 руб. </span>
-                              </div>
+                           </div>
                               <div class="hover-item">
                                  <a class="add-to-cart" href="#"> В корзину</a>
                                  <a class="add-to-compare" href="#"> Добавить к сравнению </a>
